# Knitty

./: .env.template  .gitignore  ARCHITECTURE_Version1.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE_Version1.md  README.md  README_PRODUCTION.md  README_Version1.md  TRANSFORMATION_SUMMARY.md  app.py  docs_ARCHITECTURE_Version1.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt  run_api.sh  run_streamlit.sh  streamlit_app.py
.github/: STREAMLIT_STATUS.md
config/: cvEnhancePrompt.txt  cvKeywordsPrompt.txt  cvTemplate.txt  jobKeywordsPrompt.txt  jobRagPrompt.txt
docs/: API_AND_DATA_MODELS_Version1.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  QUICKSTART.md  README.md  SCORING_PROCESS.md
examples/: additionalInfo.txt  cv.md  jobPostingText.txt
knitty/: __init__.py
knitty/api/: __init__.py  app.py
knitty/config/: __init__.py  prompts.py  settings.py
knitty/core/: __init__.py  cv_processor.py  enhancer.py  job_processor.py  llm_clients.py  pipeline.py  similarity.py
knitty/utils/: __init__.py  logging_config.py
tests/: __init__.py  conftest.py  test_cv_processor.py  test_similarity.py
