[project]
name = "knitty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "pypdf>=6.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pip>=25.2",
]
