[project]
name = "knitty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "nest-asyncio>=1.6.0",
    "playwright>=1.55.0",
    "pypdf>=6.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pip>=25.2",
]
